--- a/src/containers/Auth/Login/Login.css
+++ b/src/containers/Auth/Login/Login.css
@@ -21,7 +21,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .Form input {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 80%;
@@ -57,7 +57,8 @@
   color: lightskyblue;
   height: 100%;
   margin-bottom: 5px;
-  padding: 1px 10px;
+  margin-right: 8px;
+  padding: 0px;
   text-decoration: none;
   border-bottom: 4px solid transparent;
   display: block;
